--- a/index.html
+++ b/index.html
@@ -21,8 +21,18 @@
 <nav class="navbarX9">
   <div class="brandQ3" id="nameElementR4">BookUI+</div>
   <ul class="listM2">
+
     <li class="dropdownR8">
-      <a class="linkV1">Theme</a>
+      <a class="linkV1">New..</a>
+      <div class="dropdownContentL4">
+          
+        <a onclick="addCommand()">Command</a>
+       
+      </div>
+    </li>
+
+    <li class="dropdownR8">
+      <a class="linkV1">Theme..</a>
       <div class="dropdownContentL4">
         <a onclick="switchTheme('blue')">Blue (Default)</a>
         <a onclick="switchTheme('morning-glow')">Morning Glow</a>
@@ -35,7 +45,7 @@
       </div>
     </li>
     <li class="dropdownR8">
-      <a class="linkV1">Credits</a>
+      <a class="linkV1">Credits..</a>
       <div class="dropdownContentL4">
         <a target="_blank" href="https://www.youtube.com/@jamesydeveloper">@JamesyDeveloper (YouTube)</a>
         <a target="_blank" href="https://www.roblox.com/users/4624140937/profile">@JamesyDeveloper (Roblox)</a>
@@ -43,7 +53,7 @@
       </div>
     </li>
     <li class="dropdownR8">
-      <a class="linkV1">Help</a>
+      <a class="linkV1">Help..</a>
       <div class="dropdownContentL4">
         <a href="https://github.com/Jamesy-tech/BookUI">GitHub Repository</a>
         <a href="https://github.com/Jamesy-tech/BookUI/blob/main/README.md">Documentation</a>
