--- a/index.html
+++ b/index.html
@@ -390,6 +390,8 @@
   <h3>Custom Cursor</h3>
   <p>Change the cursor on the current page.</p>
 </div>
+      
+         <div class="cardB9" id="addCommandCard" onclick="addCommand()"><center><h1 class="cardPlus">+</h1></center></div>
 
   </div>
 </div>
