--- a/index.html
+++ b/index.html
@@ -390,6 +390,12 @@
   <h3>Custom Cursor</h3>
   <p>Change the cursor on the current page.</p>
 </div>
+
+
+<div class="cardB9" data-command='javascript:(function(){var js=document.body.appendChild(document.createElement("script"));js.onerror=function(){alert("Sorry, the script could not be loaded.")};js.src="https://rawgit.com/Krazete/bookmarklets/master/tri.js"})();'>
+  <h3>3D Webpage</h3>
+  <p>Make the current page into a 3D form.</p>
+</div>
       
          <div class="cardB9" id="addCommandCard" onclick="addCommand()"><center><h1 class="cardPlus">+</h1></center></div>
 
