--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
   <p>Toggle blur effect.</p>
 </div>
 
-<div class="cardB9" data-command="alert('Coming soon')">
+<div class="cardB9" data-command="const url = prompt('Image URL', 'https://raw.githubusercontent.com/Jamesy-tech/BookUI/main/pixel-cursor.png'); document.body.style.cursor = 'url(url)';">
   <h3>Custom Cursor</h3>
   <p>Change the cursor on the current page.</p>
 </div>
