--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@
   <p>Toggle blur effect.</p>
 </div>
 
-<div class="cardB9" data-command="
-  const url = prompt('Image URL', 'https://raw.githubusercontent.com/Jamesy-tech/BookUI/main/pixel-cursor.png'); 
-  document.body.style.cursor = 'url(' + url + '), auto';
+<div class="cardB9" onclick="
+  const url = prompt('Image URL', 'https://raw.githubusercontent.com/Jamesy-tech/BookUI/main/cursor.png');
+  document.body.style.setProperty('cursor', 'url(' + url + '), auto', 'important');
 ">
   <h3>Custom Cursor</h3>
   <p>Change the cursor on the current page.</p>
