--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
   <p>Toggle blur effect.</p>
 </div>
 
-<div class="cardB9" onclick="
+<div class="cardB9" data-command="
   const url = prompt('Image URL', 'https://raw.githubusercontent.com/Jamesy-tech/BookUI/main/pixel-cursor-downsized.png');
   document.body.style.setProperty('cursor', 'url(' + url + '), auto', 'important');
 ">
